--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -46,7 +46,7 @@ if (isset($this->profile))
             {
                 $elementX = $element["o"];
 
-                $prefixText = $counterText ."_Mprefix_$i";
+                $prefixText = $counterText ."_Mprefix";
                 $valueText = $counterText . "_Mvalue_$i";
                 echo ("<div class=\"control-group\">
                 <label class=\"control-label\" for=\"$prefix\">$prefix</label>
@@ -60,7 +60,7 @@ if (isset($this->profile))
             }
         }
 
-        $prefixText = $counterText ."_Mprefix_$i";
+        $prefixText = $counterText ."_Mprefix";
         $valueText = $counterText . "_Mvalue_$i";
         echo ("<div class=\"control-group\">
         <label class=\"control-label\" for=\"$prefix\">$prefix</label>
