Made LoadProperties reusable.

--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -8,6 +8,10 @@ if (isset($this->profile))
     {
     $counter = 0;
 
+    //echo ("Database Values:<br>");
+    //var_dump($this->profile);
+    //echo ("<hr>");
+
     if (count($this -> wrong) > 0 && !is_null($this -> wrong))
     {
         echo ("Please correct the <font color=\"#FF0000\">red</font> Properties!<br><br>");
