--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -20,6 +20,7 @@
     <?php
     if ($this->username != "guest")
     {
+        echo ("<li><a href=\"?c=conference&amp;a=edit\">Conference Editor</a></li>");
         echo ("<li><a href=\"?c=person&amp;a=profileeditor\">Profile Editor</a></li>");
         echo ("<li><a href=\"?c=application&amp;a=logout\">Logout</a></li>");
     }
