--- a/templates/conference/edit.phtml
+++ b/templates/conference/edit.phtml
@@ -142,7 +142,7 @@ if (isset($this->profile))
 }
 else
 {
-    echo ("Damn, profile not set...");
+    echo ("Create new Conference? This will be implemented soon.");
 }
 
 ?>
