--- a/templates/conference/list.phtml
+++ b/templates/conference/list.phtml
@@ -7,6 +7,7 @@ foreach ($this->profiles as $key)
     $title = $key["o"];
     echo ("<li><a href = ?c=conference&a=edit&id=$event>$event - $title</a></li>");
 }
-
+echo ("<li><a href = ?c=conference&a=edit>Create new Conference</a></li>");
 ?>
+
 </ul>
