--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -22,7 +22,7 @@
     {
         echo ("<li><a href=\"?c=conference&amp;a=list\">Show All Conferences</a></li>");
         echo ("<li><a href=\"?c=conference&amp;a=edit\">Conference Editor</a></li>");
-        echo ("<li><a href=\"?c=person&amp;a=profileeditor\">Profile Editor</a></li>");
+        echo ("<li><a href=\"?c=editor&amp;a=edit&amp;class=person\">Profile Editor</a></li>");
         echo ("<li><a href=\"?c=application&amp;a=logout\">Logout</a></li>");
     }
     else
