Use urlencode/urldecode

--- a/templates/conference/list.phtml
+++ b/templates/conference/list.phtml
@@ -3,9 +3,10 @@
 <?php
 foreach ($this->profiles as $key)
 {
+    $eventCoded = urlencode($key["event"]);
     $event = $key["event"];
     $title = $key["o"];
-    echo ("<li><a href = ?c=editor&a=edit&id=$event&class=conference>$event - $title</a></li>");
+    echo ("<li><a href = ?c=editor&a=edit&id=$eventCoded&class=conference>$event - $title</a></li>");
 }
 echo ("<li><a href = ?c=conference&a=edit&class=conference>Create new Conference</a></li>");
 ?>
