Fixed Bug with wrong Single Key

--- a/templates/editor/edit.phtml
+++ b/templates/editor/edit.phtml
@@ -11,6 +11,7 @@ if (isset($this->profile))
 
     //echo ("Database Values:<br>");
     //var_dump($this->profile);
+    //var_dump($this->profile);
     //echo ("<hr>");
 
     if (count($this -> wrong) > 0 && !is_null($this -> wrong))
