--- a/templates/conference/list.phtml
+++ b/templates/conference/list.phtml
@@ -8,7 +8,7 @@ foreach ($this->profiles as $key)
     $title = $key["o"];
     echo ("<li><a href = ?c=editor&a=edit&id=$eventCoded&class=conference>$event - $title</a></li>");
 }
-echo ("<li><a href = ?c=conference&a=edit&class=conference>Create new Conference</a></li>");
+echo ("<li><a href = ?c=conference&a=new>Create new Conference</a></li>");
 ?>
 
 </ul>
