Fixed Bug in config.

--- a/templates/editor/edit.phtml
+++ b/templates/editor/edit.phtml
@@ -17,7 +17,7 @@ if (isset($this->profile))
     if (count($this -> wrong) > 0 && !is_null($this -> wrong))
     {
         echo ("Please correct the <font color=\"#FF0000\">red</font> Properties!<br><br>");
-        var_dump($this -> wrong);
+        //var_dump($this -> wrong);
     }
 
     foreach ($this->allowedSinglePrefixes as $prefixKey => $prefix)
