--- a/templates/editor/edit.phtml
+++ b/templates/editor/edit.phtml
@@ -1,52 +1,39 @@
 ﻿<?php
 if (isset($this->profile))
 {
-    //echo ("Foo :");
     $caption = $this->caption;
-    echo ("<h2>$caption</h2>");
-    $idEncoded = urlencode($this -> id);
-    echo ("<form action=\"?c=editor&amp;a=edit&amp;class=$caption&amp;id=$idEncoded\" method=\"post\" class=\"form-horizontal\"><fieldset>");
+    echo ('<h2>$caption</h2>');
+    $idEncoded = urlencode($this->id);
+    echo ("<form action=\"?c=editor&amp;a=edit&amp;class=$caption&amp;id=$idEncoded\" method=\"post\"
+    class=\"form-horizontal\"><fieldset>");
 
     $counter = 0;
 
-    //echo ("Database Values:<br>");
-    //var_dump($this->profile);
-    //var_dump($this->profile);
-    //echo ("<hr>");
-
-    if (count($this -> wrong) > 0 && !is_null($this -> wrong))
+    if (count($this->wrong) > 0 && !is_null($this->wrong))
     {
-        echo ("Please correct the <font color=\"#FF0000\">red</font> Properties!<br><br>");
-        //var_dump($this -> wrong);
+        echo ('Please correct the <font color=\"#FF0000\">red</font> Properties!<br><br>');
     }
 
     foreach ($this->allowedSinglePrefixes as $prefixKey => $prefix)
     {
         $elementX = "";
-        //HACK: Do we have LINQ or at least something to make this better?
-        //echo ("$prefix <br>");
-        //var_dump($prefixKey);
-        //echo ("<br>");
 
         foreach ($this->profile as $key => $element)
         {
-            if ($element["p"] == $prefixKey)
+            if ($element['p'] == $prefixKey)
             {
-                $elementX = $element["o"];
+                $elementX = $element['o'];
             }
         }
         $counterText = (string)$counter;
-        $prefixText = $counterText ."_prefix";
-        $valueText = $counterText . "_value";
+        $prefixText = $counterText .'_prefix';
+        $valueText = $counterText . '_value';
         $thisIsWrong = false;
 
         foreach($this->wrong as $keyX => $array)
         {
-            //echo ($array['p']);
-            //if ($array['p'] == $prefixKey)
             if (strcmp($keyX,$prefixKey) == 0)
             {
-                //echo ("Wrong: $elementX");
                 $thisIsWrong = true;
                 $elementX = $this->wrong[$keyX];
                 break;
@@ -56,10 +43,13 @@ if (isset($this->profile))
         if ($thisIsWrong)
         {
             echo ("<div class=\"control-group\">
-            <label class=\"control-label\" for=\"$prefixKey\"><font color=\"#FF0000\">$prefixKey</font></label>
+            <label class=\"control-label\" for=\"$prefixKey\">
+            <font color=\"#FF0000\">$prefixKey</font></label>
             <div class=\"controls\">
-            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\" id=\"$valueText\" value=\"$elementX\"/>
-            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\" id=\"$prefixText\" value=\"$prefixKey\"/>
+            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
+            id=\"$valueText\" value=\"$elementX\"/>
+            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
+            id=\"$prefixText\" value=\"$prefixKey\"/>
             </div>
             </div>");
         }
@@ -68,8 +58,10 @@ if (isset($this->profile))
             echo ("<div class=\"control-group\">
             <label class=\"control-label\" for=\"$prefixKey\">$prefixKey</label>
             <div class=\"controls\">
-            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\" id=\"$valueText\" value=\"$elementX\"/>
-            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\" id=\"$prefixText\" value=\"$prefixKey\"/>
+            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
+            id=\"$valueText\" value=\"$elementX\"/>
+            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
+            id=\"$prefixText\" value=\"$prefixKey\"/>
             </div>
             </div>");
         }
@@ -82,15 +74,16 @@ if (isset($this->profile))
         $elementX = "";
         $i = 0;
         $counterText = (string)$counter;
-        //HACK: Do we have LINQ or at least something to make this better?
         foreach ($this->profile as $key => $element)
         {
-            if ($element["p"] == $prefix)
+            if ($element['p'] == $prefix)
             {
                 $elementX = $element["o"];
 
-                $prefixText = $counterText ."_Mprefix";
-                $valueText = $counterText . "_Mvalue_$i";
+                $prefixText = $counterText
+                            . '_Mprefix';
+                $valueText = $counterText
+                           . "_Mvalue_$i";
 
                 $thisIsWrong = false;
 
@@ -106,10 +99,13 @@ if (isset($this->profile))
                 if ($thisIsWrong)
                 {
                     echo ("<div class=\"control-group\">
-                    <label class=\"control-label\" for=\"$prefix\"><font color=\"#FF0000\">$prefix</font></label>
+                    <label class=\"control-label\" for=\"$prefix\">
+                    <font color=\"#FF0000\">$prefix</font></label>
                     <div class=\"controls\">
-                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\" id=\"$valueText\" value=\"$elementX\"/>
-                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\" id=\"$prefixText\" value=\"$prefix\"/>
+                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
+                    id=\"$valueText\" value=\"$elementX\"/>
+                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
+                    id=\"$prefixText\" value=\"$prefix\"/>
                     </div>
                     </div>");
                 }
@@ -118,8 +114,10 @@ if (isset($this->profile))
                     echo ("<div class=\"control-group\">
                     <label class=\"control-label\" for=\"$prefix\">$prefix</label>
                     <div class=\"controls\">
-                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\" id=\"$valueText\" value=\"$elementX\"/>
-                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\" id=\"$prefixText\" value=\"$prefix\"/>
+                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
+                    id=\"$valueText\" value=\"$elementX\"/>
+                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
+                    id=\"$prefixText\" value=\"$prefix\"/>
                     </div>
                     </div>");
                 }
@@ -127,23 +125,24 @@ if (isset($this->profile))
             }
         }
 
-        $prefixText = $counterText ."_Mprefix";
+        $prefixText = $counterText .'_Mprefix';
         $valueText = $counterText . "_Mvalue_$i";
         echo ("<div class=\"control-group\">
         <label class=\"control-label\" for=\"$prefix\">$prefix</label>
         <div class=\"controls\">
-        <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\" id=\"$valueText\" value=\"\"/>
-        <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\" id=\"$prefixText\" value=\"$prefix\"/>
+        <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
+        id=\"$valueText\" value=\"\"/>
+        <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
+        id=\"$prefixText\" value=\"$prefix\"/>
         </div>
         </div>");
 
         $counter = $counter + 1;
-        //echo ("Prefix: $prefix <br>");
     }
 }
 else
 {
-    echo ("Damn, profile not set...");
+    echo ('Damn, profile not set...');
 }
 
 ?>
