First changes to editor to make it working

--- a/templates/conference/list.phtml
+++ b/templates/conference/list.phtml
@@ -1,14 +1,12 @@
 <h2>List of Conferences</h2>
 <ul>
+<?php foreach ($this->profiles as $key) : ?>
 <?php
-foreach ($this->profiles as $key)
-{
     $eventCoded = urlencode($key["event"]);
     $event = $key["event"];
     $title = $key["o"];
-    echo ("<li><a href = ?c=editor&a=edit&id=$eventCoded&class=conference>$event - $title</a></li>");
-}
-echo ("<li><a href = ?c=conference&a=new>Create new Conference</a></li>");
 ?>
-
+    <li><a href="?c=editor&amp;a=edit&amp;id=<?= $eventCoded ?>&amp;class=conference"><?= $event ?> - <?= $title ?></a></li>
+<?php endforeach; ?>
 </ul>
+<a href="?c=conference&amp;a=new">Create new Conference</a>
