--- a/templates/conference/new.phtml
+++ b/templates/conference/new.phtml
@@ -5,5 +5,5 @@ Conference succesfully created.<br>
 <?php
     $id = $this -> id;
     $idCoded = urlencode($id);
-    echo ("<a href = \"?c=editor&a=edit&id=$idCoded&class=conference\">Edit this conference</a>");
 ?>
+<a href = "?c=editor&amp;a=edit&amp;id=<?= $idCoded ?>&amp;class=conference">Edit this conference</a>
