--- a/templates/editor/edit.phtml
+++ b/templates/editor/edit.phtml
@@ -1,156 +1,105 @@
-﻿<?php
-if (isset($this->profile))
-{
-    $caption = $this->caption;
-    echo ('<h2>$caption</h2>');
-    $idEncoded = urlencode($this->id);
-    echo ("<form action=\"?c=editor&amp;a=edit&amp;class=$caption&amp;id=$idEncoded\" method=\"post\"
-    class=\"form-horizontal\"><fieldset>");
+﻿<?php if (!isset($this->profile)): ?>
+<span>Sorry, the profile is not set.</span>
+        <?= var_export($_POST, true) ?>
+        <?= var_export($this->diff, true) ?>
 
-    $counter = 0;
+<?php else : ?>
 
-    if (count($this->wrong) > 0 && !is_null($this->wrong))
-    {
-        echo ('Please correct the <font color=\"#FF0000\">red</font> Properties!<br><br>');
+<h2>Edit resource</h2>
+<form action="?c=editor&amp;a=edit&amp;class=<?= $this->caption ?>&amp;id=<?= urlencode($this->id) ?>" method="post" class="form-horizontal">
+<fieldset>
+    <legend>
+<p><?= htmlentities($this->id) ?></p>
+    </legend>
+<?php if (isset($this->info)) : ?>
+<div class="alert alert-success">
+<?= $this->info ?>
+</div>
+<?php endif;
+if (isset($this->error)) : ?>
+<div class="alert alert-error">
+<?= $this->error ?>
+</div>
+<?php endif; ?>
+
+<?php
+    if (isset($this->diff)) {
+        var_dump($this->diff);
     }
-
-    foreach ($this->allowedSinglePrefixes as $prefixKey => $prefix)
-    {
-        $elementX = "";
-
-        foreach ($this->profile as $key => $element)
-        {
-            if ($element['p'] == $prefixKey)
-            {
-                $elementX = $element['o'];
-            }
-        }
-        $counterText = (string)$counter;
-        $prefixText = $counterText .'_prefix';
-        $valueText = $counterText . '_value';
-        $thisIsWrong = false;
-
-        foreach($this->wrong as $keyX => $array)
-        {
-            if (strcmp($keyX,$prefixKey) == 0)
-            {
-                $thisIsWrong = true;
-                $elementX = $this->wrong[$keyX];
-                break;
-            }
-        }
-
-        if ($thisIsWrong)
-        {
-            echo ("<div class=\"control-group\">
-            <label class=\"control-label\" for=\"$prefixKey\">
-            <font color=\"#FF0000\">$prefixKey</font></label>
-            <div class=\"controls\">
-            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
-            id=\"$valueText\" value=\"$elementX\"/>
-            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
-            id=\"$prefixText\" value=\"$prefixKey\"/>
-            </div>
-            </div>");
-        }
-        else
-        {
-            echo ("<div class=\"control-group\">
-            <label class=\"control-label\" for=\"$prefixKey\">$prefixKey</label>
-            <div class=\"controls\">
-            <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
-            id=\"$valueText\" value=\"$elementX\"/>
-            <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
-            id=\"$prefixText\" value=\"$prefixKey\"/>
-            </div>
-            </div>");
-        }
-        $counter = $counter + 1;
-    }
-
-    $counter = 0;
-    foreach ($this->allowedMultiplePrefixes as $prefix => $prefixValue)
-    {
-        $elementX = "";
-        $i = 0;
-        $counterText = (string)$counter;
-        foreach ($this->profile as $key => $element)
-        {
-            if ($element['p'] == $prefix)
-            {
-                $elementX = $element["o"];
-
-                $prefixText = $counterText
-                            . '_Mprefix';
-                $valueText = $counterText
-                           . "_Mvalue_$i";
-
-                $thisIsWrong = false;
-
-                foreach($this->wrong as $key => $array)
-                {
-                    if ($array['p'] == $prefix && $array['o'] == $elementX)
-                    {
-                        $thisIsWrong = true;
-                        break;
-                    }
-                }
-
-                if ($thisIsWrong)
-                {
-                    echo ("<div class=\"control-group\">
-                    <label class=\"control-label\" for=\"$prefix\">
-                    <font color=\"#FF0000\">$prefix</font></label>
-                    <div class=\"controls\">
-                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
-                    id=\"$valueText\" value=\"$elementX\"/>
-                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
-                    id=\"$prefixText\" value=\"$prefix\"/>
-                    </div>
-                    </div>");
-                }
-                else
-                {
-                    echo ("<div class=\"control-group\">
-                    <label class=\"control-label\" for=\"$prefix\">$prefix</label>
-                    <div class=\"controls\">
-                    <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
-                    id=\"$valueText\" value=\"$elementX\"/>
-                    <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
-                    id=\"$prefixText\" value=\"$prefix\"/>
-                    </div>
-                    </div>");
-                }
-                $i=$i+1;
-            }
-        }
-
-        $prefixText = $counterText .'_Mprefix';
-        $valueText = $counterText . "_Mvalue_$i";
-        echo ("<div class=\"control-group\">
-        <label class=\"control-label\" for=\"$prefix\">$prefix</label>
-        <div class=\"controls\">
-        <input type=\"text\" class=\"input-xlarge\" name=\"$valueText\"
-        id=\"$valueText\" value=\"\"/>
-        <input type=\"hidden\" class=\"input-xlarge\" name=\"$prefixText\"
-        id=\"$prefixText\" value=\"$prefix\"/>
-        </div>
-        </div>");
-
-        $counter = $counter + 1;
-    }
-}
-else
-{
-    echo ('Damn, profile not set...');
-}
-
 ?>
 
+<?php
+$countMax = 0;
+foreach ($this->profile[$this->id] as $predicate => $objects) :
+    $predicateTitle = $predicate; // TODO use title helper
+?>
+    <div class="control-group">
+        <label class="control-label" for="<?= $predicate ?>"><?= $predicateTitle ?></label>
+        <div class="controls">
+<?php
+    $count = 0;
+    foreach ($objects as $object) :
+        $value = $object['value'];
+        $type = $object['type'];
+        if (isset($this->wrong) && isset($this->wrong[$predicate]) && in_array($value, $this->wrong[$predicate])) {
+            $thisIsWrong = true;
+        } else {
+            $thisIsWrong = false;
+        }
+    ?>
+            <input type="hidden" name="newValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][type]" value="<?= htmlentities($type) ?>"/>
+            <input type="text" name="newValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][value]" value="<?= htmlentities($value) ?>"/>
+            <a href="javascript:deleteProperty('<?= $predicate ?>')">-</a>
+            <?= $thisIsWrong ? '<i class="icon-warning-sign"></i>' : '' ?>
+            <br />
+<?php
+        $added = false;
+        if (isset($this->diff['add'][$this->id][$predicate])) {
+            foreach ($this->diff['add'][$this->id][$predicate] as $object) {
+                if ($object['value'] == $value && $object['type'] == $type) {
+                    $added = true;
+                    break;
+                }
+            }
+        }
+        if (!$added) :
+?>
+            <input type="hidden" name="originalValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][type]" value="<?= htmlentities($type) ?>" />
+            <input type="hidden" name="originalValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][value]" value="<?= htmlentities($value) ?>" />
+<?php
+        endif;
+        $count++;
+    endforeach;
+    $countMax = max($countMax, $count);
+?>
+            <a href="javascript:appendPropertyGroup('<?= $predicate ?>')">+</a>
+        </div>
+    </div>
+<?php endforeach; ?>
 <div class="form-actions">
     <button class="btn btn-primary" type="submit">Save</button>
 </div>
-
 </fieldset>
-
+<?php
+        if (isset($this->diff['delete'][$this->id])) :
+    foreach ($this->diff['delete'][$this->id] as $predicate => $objects) :
+        $count = $countMax;
+        foreach ($objects as $object):
+            $value = $object['value'];
+            $type = $object['type'];
+?>
+            <input type="hidden" name="originalValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][type]" value="<?= htmlentities($type) ?>" />
+            <input type="hidden" name="originalValues[<?= $this->id ?>][<?= $predicate ?>][<?= $count ?>][value]" value="<?= htmlentities($value) ?>" />
+<?php
+            $count++;
+        endforeach;
+    endforeach;
+endif;
+?>
 </form>
+<script language="javascript" type="text/javascript">
+function appendPropertyGroup (property) {
+    this.append("<div></div>");
+}
+</script>
+<?php endif; ?>
