--- a/templates/partials/friendlist.phtml
+++ b/templates/partials/friendlist.phtml
@@ -19,13 +19,16 @@
                 $name = "unknown name";
             }
         ?>
+        <?php  ?>
         <strong><?= $name ?></strong><br />
         <a href="?c=person&amp;uri=<?= urlencode($contact['contactUri']) ?>"><?= $contact['contactUri'] ?></a>
+        <?php if($this->personUri == $this->logInUri): ?>
         <form method="post" action="?c=person&amp;a=deleteFriend">
             <input type="hidden" name="person" value="<?= htmlentities($this->personUri) ?>" />
             <input type="hidden" name="friend" value="<?= $contact['contactUri'] ?>" />
             <button class="btn btn-block btn-danger" type="submit">Unfriend</button>
         </form>
+        <?php endif; ?>
     </address>
     <?php endforeach; ?>
 <?php endif; ?>
