--- a/templates/partials/friendlist.phtml
+++ b/templates/partials/friendlist.phtml
@@ -28,6 +28,12 @@
             <input type="hidden" name="friend" value="<?= $contact['contactUri'] ?>" />
             <button class="btn btn-block btn-danger" type="submit">Unfriend</button>
         </form>
+        <?php elseif($this->isHome): ?>
+        <form method="post" action="?c=person&amp;a=deleteFriend">
+            <input type="hidden" name="person" value="<?= htmlentities($this->personUri) ?>" />
+            <input type="hidden" name="friend" value="<?= $contact['contactUri'] ?>" />
+            <button class="btn btn-block btn-danger" type="submit">Unfriend</button>
+        </form>
         <?php endif; ?>
     </address>
     <?php endforeach; ?>
