add OAuth2Controller, OAuthController, GoogleController, update Application, ApplicationController, IndexController

--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -17,7 +17,8 @@
     <li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
 </ul>
 <ul class="nav pull-right">
-    <li><a href="?c=application&amp;a=login">Login</a></li>
+    <li><a href="?c=oauth2&amp;a=login">Login</a></li>
     <li><a href="?c=application&amp;a=logout">Logout</a></li>
+	<li><a href="http://symbolicdata.org/Login-Authorization">To Login Node</a></li>
 </ul>
 </div><!--/.nav-collapse -->
